--- a/estilo.css
+++ b/estilo.css
@@ -2,9 +2,16 @@ body{
     background-color: rgba(16, 81, 157, 0.364);
 }
 *{
+    margin: 0;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 #app{
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    flex-direction:row;
     font-size: 20px;
     background-color: rgba(0, 0, 0, 0.403);
     border-radius: 5px;
@@ -21,4 +28,15 @@ input{
     width: 200px;
     height: 50px;
     text-align: center;
+}
+.exibirsaldo{
+    border: 2px solid;
+    padding: 10px;
+    border-radius: 10px;
+    margin-right: 10%;
+}
+.alterarsaldo{
+    border: 2px solid;
+    padding: 10px;
+    border-radius: 10px;
 }
